# gtplay

./: .gitignore  CONCEPT.md  CONCEPT.txt  Makefile  README.md  a.out  gtplay
.github/workflows/: c-cpp.yml
src/: a.out  gmp3.cpp  gmp3.hpp  gtables.hpp  id3.cpp  id3.h  listen.h  main.cpp  mp3.cpp  mp3.h  wav.cpp  wav.h
src/gmp3/: gmp3.cpp  gmp3.hpp  gtables.hpp
src/gwav/: wav.cpp  wav.h
src/ui/: gcpanel.cpp  gcpanel.hpp  ui.cpp  ui.hpp  window.cpp  window.hpp
src/util/: gutil.cpp  gutil.hpp  id3.cpp  id3.h
stm32decoder/: Cargo.toml
stm32decoder/.cargo/: config.toml
stm32decoder/src/: main.rs
