[package]
name = "stm32decoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z' # turn on maximum optimizations. We only have 64kB
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
cortex-m = "^0.6.3"      # Access to the generic ARM peripherals
cortex-m-rt = "^0.6.12"  # Startup code for the ARM Core
embedded-hal = "^0.2.4"  # Access to generic embedded functions (`set_high`)
panic-halt = "^0.2.0"    # Panic handler
usb-device = "*"
stm32f1xx-hal = { version = "*",features = ["rt", "stm32f103","stm32-usbd"]}
# panic-semihosting = "*"
usbd-serial = "*"
usbd-webusb = "*"
cortex-m-rtic = "*"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
systick-monotonic = "1.0.0"
